deployment-servicebus-xdebug.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-server-servicebus
  labels:
    app: php-www-servicebus
spec:
  replicas: 1
  selector:
    # will match template label(s)
    matchLabels:
      app: php-www-servicebus
  template:
    metadata:
      labels:
        # (this one)
        app: php-www-servicebus
    spec:
      containers:
        - name: php-www-servicebus
          image: rmbsousa/stuff:php70_xdebug
          command: ["bash", "-c", "--"]
          args: ["while true; do sleep 10; done;"]
#          ports:
#            - containerPort: 80
          volumeMounts:
            - name: app-code
              mountPath: /www
#            - name: config-code
#              mountPath: /var/www
#          lifecycle:
#            postStart:
#              exec:
#                command: ["/bin/bash", "/var/www/minikube/config-servicebus.sh"]
      volumes:
        - name: app-code
          hostPath:
            path: "/c/Users/NB26175/Zend/workspaces/DefaultWorkspace"
#        - name: config-code
#          hostPath:
#            path: "/c/Users/NB26175/projects"
